--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^2.4.1",
     "express": "^4.13.4",
     "express-handlebars": "^3.0.0",
-    "jade": "^1.11.0"
+    "mongodb": "^2.1.7"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
